Test branch (#357)
* Update properties

* update application

* optimize create member and payroll amount modification

* payrollamount

bug fixing in filtering  the userpayroll amount by the given range

* endpoint

* Report Module

1. Report management separation using factory pattern and template driven pattern
2. Cache reloading fix

* Update  properties

* Modified dashboard summay

* Modified getAll payroll amount

* Modified get payroll

* angular Update

* Update user payroll

* Payroll api call fixing

---------

Co-authored-by: Lavanya-Uniq <lavanya.v@uniqtechnologies.co.in>
Co-authored-by: Dharshini-Finytive <dharshini.sibiyal@finytive.com>
Co-authored-by: Indhu-finytive <indhuja.vijay@finytive.com>