@@ -1,44 +1,19 @@
-package com.uniq.tms.tms_microservice.modules.timesheetManagement.services.impl;
+package com.uniq.tms.tms_microservice.modules.ReportManagement.writer;
 
 import com.opencsv.CSVWriter;
-import com.uniq.tms.tms_microservice.modules.timesheetManagement.dto.FileExportResponseDto;
 import com.uniq.tms.tms_microservice.modules.timesheetManagement.dto.TimesheetDto;
-import com.uniq.tms.tms_microservice.modules.timesheetManagement.dto.TimesheetReportDto;
 import com.uniq.tms.tms_microservice.modules.timesheetManagement.dto.UserTimesheetResponseDto;
-import com.uniq.tms.tms_microservice.modules.timesheetManagement.enums.Timeperiod;
-import com.uniq.tms.tms_microservice.modules.timesheetManagement.services.ReportService;
-import com.uniq.tms.tms_microservice.modules.timesheetManagement.services.TimesheetService;
-import com.uniq.tms.tms_microservice.modules.userManagement.services.UserService;
-import com.uniq.tms.tms_microservice.shared.util.ReportStyleUtil;
+import com.uniq.tms.tms_microservice.modules.ReportManagement.util.ReportStyleUtil;
 import io.jsonwebtoken.io.IOException;
-import org.apache.logging.log4j.LogManager;
-import org.apache.logging.log4j.Logger;
-import org.apache.poi.ss.usermodel.BorderStyle;
-import org.apache.poi.ss.usermodel.Cell;
-import org.apache.poi.ss.usermodel.CellStyle;
-import org.apache.poi.ss.usermodel.FillPatternType;
-import org.apache.poi.ss.usermodel.Font;
-import org.apache.poi.ss.usermodel.HorizontalAlignment;
-import org.apache.poi.ss.usermodel.IndexedColors;
-import org.apache.poi.ss.usermodel.Row;
-import org.apache.poi.ss.usermodel.Sheet;
-import org.apache.poi.ss.usermodel.VerticalAlignment;
-import org.apache.poi.ss.usermodel.Workbook;
+import org.apache.poi.ss.usermodel.*;
 import org.apache.poi.ss.util.CellRangeAddress;
 import org.apache.poi.ss.util.RegionUtil;
 import org.apache.poi.xssf.usermodel.XSSFWorkbook;
-import org.springframework.beans.factory.annotation.Value;
 import org.springframework.core.io.ClassPathResource;
-import org.springframework.stereotype.Service;
-import java.io.BufferedReader;
-import java.io.ByteArrayOutputStream;
-import java.io.InputStreamReader;
-import java.io.OutputStreamWriter;
+import org.springframework.stereotype.Component;
+import java.io.*;
 import java.nio.charset.StandardCharsets;
 import java.nio.file.Files;
-import java.nio.file.Path;
-import java.nio.file.Paths;
-import java.time.LocalDate;
 import java.time.format.DateTimeFormatter;
 import java.util.ArrayList;
 import java.util.Arrays;
@@ -46,30 +21,38 @@ import java.util.List;
 import java.util.Map;
 import java.util.stream.Collectors;
 
-@Service
-public class ReportServiceImpl implements ReportService {
+@Component
+public class TimesheetWriter {
 
-    private final Logger log = LogManager.getLogger(ReportServiceImpl.class);
-
-    private final TimesheetService timesheetService;
-    private final UserService userService;
     private final ReportStyleUtil reportStyleUtil;
-    
-    public ReportServiceImpl(TimesheetService timesheetService, UserService userService, ReportStyleUtil reportStyleUtil) {
-        this.timesheetService = timesheetService;
-        this.userService = userService;
+
+    public TimesheetWriter(ReportStyleUtil reportStyleUtil) {
         this.reportStyleUtil = reportStyleUtil;
     }
 
-    @Value("${csv.download.dir}")
-    private String downloadDir;
+    public void writeDayCsv(List<UserTimesheetResponseDto> data, File file) throws Exception {
+        Files.write(file.toPath(), exportTimesheetDayCsv(data));
+    }
+
+    public void writeDayXlsx(List<UserTimesheetResponseDto> data, File file) throws Exception {
+        Files.write(file.toPath(), exportTimesheetDayXlsx(data));
+    }
+
+    public void writeWeekCsv(List<UserTimesheetResponseDto> data, File file) throws Exception {
+        Files.write(file.toPath(), exportTimesheetWeekCsv(data));
+    }
+
+    public void writeWeekXlsx(List<UserTimesheetResponseDto> data, File file) throws Exception {
+        Files.write(file.toPath(), exportTimesheetWeekXlsx(data));
+    }
+
 
     /**
      *
      * @param timesheet
      * @return timesheet report based on selected day timeperiod
      */
-    public byte[] exportTimesheetDayCsv(List<UserTimesheetResponseDto> timesheet, String sheetName) {
+    public byte[] exportTimesheetDayCsv(List<UserTimesheetResponseDto> timesheet) {
         try (ByteArrayOutputStream out = new ByteArrayOutputStream();
              OutputStreamWriter outputStreamWriter = new OutputStreamWriter(out , StandardCharsets.UTF_8);
              CSVWriter csvWriter = new CSVWriter(outputStreamWriter, CSVWriter.DEFAULT_SEPARATOR,
@@ -103,72 +86,72 @@ public class ReportServiceImpl implements ReportService {
             }
             csvWriter.flush();
             return out.toByteArray();
-        } catch (IOException | java.io.IOException e) {
+        } catch (io.jsonwebtoken.io.IOException | java.io.IOException e) {
             throw new RuntimeException("CSV export failed", e);
         }
     }
 
     public byte[] exportTimesheetDayXlsx(List<UserTimesheetResponseDto> timesheet) {
-            try (Workbook workbook = new XSSFWorkbook();
-                 ByteArrayOutputStream out = new ByteArrayOutputStream()) {
-                Sheet sheet = workbook.createSheet("Timesheets");
-                ClassPathResource resource = new ClassPathResource("templates/text/timesheet_excel_header.txt");
-                List<String> headerLines;
-                try (BufferedReader reader = new BufferedReader(new InputStreamReader(resource.getInputStream(), StandardCharsets.UTF_8))) {
-                    headerLines = reader.lines().toList();
-                }
-                String[] headers = headerLines.getFirst().split("\\|");
-                CellStyle headerCellStyle = workbook.createCellStyle();
-                headerCellStyle.setFillForegroundColor(IndexedColors.RED.getIndex());
-                headerCellStyle.setFillPattern(FillPatternType.SOLID_FOREGROUND);
-                Font headerFont = workbook.createFont();
-                headerFont.setBold(true);
-                headerFont.setColor(IndexedColors.WHITE.getIndex());
-                headerCellStyle.setFont(headerFont);
-                headerCellStyle.setAlignment(HorizontalAlignment.CENTER);
-                headerCellStyle.setVerticalAlignment(VerticalAlignment.CENTER);
-                reportStyleUtil.setThinBorder(headerCellStyle);
-                CellStyle dataCellStyle = workbook.createCellStyle();
-                dataCellStyle.setAlignment(HorizontalAlignment.CENTER);
-                dataCellStyle.setVerticalAlignment(VerticalAlignment.CENTER);
-                reportStyleUtil.setThinBorder(dataCellStyle);
-                Row headerRow = sheet.createRow(0);
-                for (int i = 0; i < headers.length; i++) {
-                    reportStyleUtil.createStyledCell(headerRow, i, " " + headers[i] + " ", headerCellStyle);
-                }
-                int rowIdx = 1;
-                int serialNumber = 1;
-                for (UserTimesheetResponseDto resultDto : timesheet) {
-                    List<TimesheetDto> timesheets = resultDto.getTimesheets();
-                    if (timesheets != null) {
-                        for (TimesheetDto dto : timesheets) {
-                            Row row = sheet.createRow(rowIdx++);
-                            int col = 0;
-                            reportStyleUtil.createStyledCell(row, col++, String.valueOf(serialNumber++), dataCellStyle);
-                            reportStyleUtil.createStyledCell(row, col++, dto.getUserName(), dataCellStyle);
-                            reportStyleUtil.createStyledCell(row, col++, dto.getMobileNumber(), dataCellStyle);
-                            reportStyleUtil.createStyledCell(row, col++, dto.getGroupName(), dataCellStyle);
-                            reportStyleUtil.createStyledCell(row, col++, dto.getStatus(), dataCellStyle);
-                            reportStyleUtil.createStyledCell(row, col++, String.valueOf(dto.getDate()), dataCellStyle);
-                            reportStyleUtil.createStyledCell(row, col++, String.valueOf(dto.getFirstClockInTime()), dataCellStyle);
-                            reportStyleUtil.createStyledCell(row, col++, String.valueOf(dto.getLastClockOutTime()), dataCellStyle);
-                            reportStyleUtil.createStyledCell(row, col++, String.valueOf(dto.getTrackedHoursDuration()), dataCellStyle);
-                            reportStyleUtil.createStyledCell(row, col++, String.valueOf(dto.getRegularHoursDuration()), dataCellStyle);
-                            reportStyleUtil.createStyledCell(row, col, dto.getTotalOverTime(), dataCellStyle);
-                        }
-                    }
-                    }
-                for (int i = 0; i < headers.length; i++) {
-                    sheet.autoSizeColumn(i);
-                }
-                sheet.setColumnWidth(3, 15 * 256);
-                workbook.write(out);
-                return out.toByteArray();
-
-            } catch (IOException | java.io.IOException e) {
-                throw new RuntimeException("XLSX export failed", e);
+        try (Workbook workbook = new XSSFWorkbook();
+             ByteArrayOutputStream out = new ByteArrayOutputStream()) {
+            Sheet sheet = workbook.createSheet("Timesheets");
+            ClassPathResource resource = new ClassPathResource("templates/text/timesheet_excel_header.txt");
+            List<String> headerLines;
+            try (BufferedReader reader = new BufferedReader(new InputStreamReader(resource.getInputStream(), StandardCharsets.UTF_8))) {
+                headerLines = reader.lines().toList();
             }
+            String[] headers = headerLines.getFirst().split("\\|");
+            CellStyle headerCellStyle = workbook.createCellStyle();
+            headerCellStyle.setFillForegroundColor(IndexedColors.RED.getIndex());
+            headerCellStyle.setFillPattern(FillPatternType.SOLID_FOREGROUND);
+            Font headerFont = workbook.createFont();
+            headerFont.setBold(true);
+            headerFont.setColor(IndexedColors.WHITE.getIndex());
+            headerCellStyle.setFont(headerFont);
+            headerCellStyle.setAlignment(HorizontalAlignment.CENTER);
+            headerCellStyle.setVerticalAlignment(VerticalAlignment.CENTER);
+            reportStyleUtil.setThinBorder(headerCellStyle);
+            CellStyle dataCellStyle = workbook.createCellStyle();
+            dataCellStyle.setAlignment(HorizontalAlignment.CENTER);
+            dataCellStyle.setVerticalAlignment(VerticalAlignment.CENTER);
+            reportStyleUtil.setThinBorder(dataCellStyle);
+            Row headerRow = sheet.createRow(0);
+            for (int i = 0; i < headers.length; i++) {
+                reportStyleUtil.createStyledCell(headerRow, i, " " + headers[i] + " ", headerCellStyle);
+            }
+            int rowIdx = 1;
+            int serialNumber = 1;
+            for (UserTimesheetResponseDto resultDto : timesheet) {
+                List<TimesheetDto> timesheets = resultDto.getTimesheets();
+                if (timesheets != null) {
+                    for (TimesheetDto dto : timesheets) {
+                        Row row = sheet.createRow(rowIdx++);
+                        int col = 0;
+                        reportStyleUtil.createStyledCell(row, col++, String.valueOf(serialNumber++), dataCellStyle);
+                        reportStyleUtil.createStyledCell(row, col++, dto.getUserName(), dataCellStyle);
+                        reportStyleUtil.createStyledCell(row, col++, dto.getMobileNumber(), dataCellStyle);
+                        reportStyleUtil.createStyledCell(row, col++, dto.getGroupName(), dataCellStyle);
+                        reportStyleUtil.createStyledCell(row, col++, dto.getStatus(), dataCellStyle);
+                        reportStyleUtil.createStyledCell(row, col++, String.valueOf(dto.getDate()), dataCellStyle);
+                        reportStyleUtil.createStyledCell(row, col++, String.valueOf(dto.getFirstClockInTime()), dataCellStyle);
+                        reportStyleUtil.createStyledCell(row, col++, String.valueOf(dto.getLastClockOutTime()), dataCellStyle);
+                        reportStyleUtil.createStyledCell(row, col++, String.valueOf(dto.getTrackedHoursDuration()), dataCellStyle);
+                        reportStyleUtil.createStyledCell(row, col++, String.valueOf(dto.getRegularHoursDuration()), dataCellStyle);
+                        reportStyleUtil.createStyledCell(row, col, dto.getTotalOverTime(), dataCellStyle);
+                    }
+                }
+            }
+            for (int i = 0; i < headers.length; i++) {
+                sheet.autoSizeColumn(i);
+            }
+            sheet.setColumnWidth(3, 15 * 256);
+            workbook.write(out);
+            return out.toByteArray();
+
+        } catch (io.jsonwebtoken.io.IOException | java.io.IOException e) {
+            throw new RuntimeException("XLSX export failed", e);
         }
+    }
 
     public byte[] exportTimesheetWeekXlsx(List<UserTimesheetResponseDto> timesheets) {
         try (Workbook workbook = new XSSFWorkbook(); ByteArrayOutputStream out = new ByteArrayOutputStream()) {
@@ -309,7 +292,7 @@ public class ReportServiceImpl implements ReportService {
         if (timesheets == null || timesheets.isEmpty()) {
             return sb.toString().getBytes(StandardCharsets.UTF_8);
         }
-        List<TimesheetDto> firstUserTimesheets = timesheets.get(0).getTimesheets();
+        List<TimesheetDto> firstUserTimesheets = timesheets.getFirst().getTimesheets();
         List<String> dateHeaders = firstUserTimesheets.stream()
                 .map(t -> String.valueOf(t.getDate()))
                 .toList();
@@ -373,62 +356,4 @@ public class ReportServiceImpl implements ReportService {
         return value;
     }
 
-    public FileExportResponseDto generateTimesheetFile(TimesheetReportDto request, String userIdFromToken, String orgId, String role, String fileName) {
-        List<UserTimesheetResponseDto> timesheets = timesheetService.getAllTimesheets(userIdFromToken,orgId,role,request).getUserTimesheetResponseDtos();
-        log.info("Requested Timesheet Date Range: {} to {}", request.getFromDate(), request.getToDate());
-        log.info("Total timesheets fetched: {}", timesheets.size());
-        String format = request.getFormat();
-        String timePeriod = request.getTimePeriod();
-        LocalDate startDate = request.getFromDate();
-        LocalDate endDate = request.getToDate();
-        if(request.getGroupId() != null && request.getGroupId().size() == 1){
-            Long requestedGroupId = request.getGroupId().getFirst();
-            String requestedGroupName = userService.findGroupName(requestedGroupId);
-            log.info("Selected single Group name:{}", requestedGroupName);
-            for (UserTimesheetResponseDto dto : timesheets){
-                if (dto.getTimesheets() != null){
-                    for (TimesheetDto timesheetDto : dto.getTimesheets()){
-                        timesheetDto.setGroupName(requestedGroupName);
-                    }
-                }
-            }
-        }
-        Path resourcePath = Paths.get(downloadDir);
-        if (!Files.exists(resourcePath)) {
-            try {
-                Files.createDirectories(resourcePath);
-            } catch (java.io.IOException e) {
-                throw new RuntimeException(e);
-            }
-        }
-
-        Path filePath = resourcePath.resolve(fileName);
-        DateTimeFormatter formatter = DateTimeFormatter.ofPattern("yyyy-MM-dd");
-        String sheetName;
-        if ("DAY".equalsIgnoreCase(timePeriod)) {
-            sheetName = "Timesheet_" + startDate.format(formatter);
-        } else if ("WEEK".equalsIgnoreCase(timePeriod)) {
-            sheetName = "Timesheet_Weekly";
-        } else if ("MONTH".equalsIgnoreCase(timePeriod)) {
-            sheetName = "Timesheet_Monthly";
-        } else {
-            sheetName = "Timesheet_" + startDate.format(formatter) + "_to_" + endDate.format(formatter);
-        }
-        byte[] data;
-        if (Timeperiod.DAY.name().equalsIgnoreCase(timePeriod)) {
-            data = "csv".equalsIgnoreCase(format) ?
-                    exportTimesheetDayCsv(timesheets, sheetName) :
-                    exportTimesheetDayXlsx(timesheets);
-        } else {
-            data = "csv".equalsIgnoreCase(format) ?
-                    exportTimesheetWeekCsv(timesheets) :
-                    exportTimesheetWeekXlsx(timesheets);
-        }
-        try {
-            Files.write(filePath, data);
-        } catch (java.io.IOException e) {
-            throw new RuntimeException(e);
-        }
-        return null;
-    }
 }
